--- a/client/summary.html
+++ b/client/summary.html
@@ -1,5 +1,7 @@
 <template name="summary">
 	<div class="summary">
-		This page will hold the summary 
+		{{> userList}}
+		
+		<!--{{> trackList}} -->
 	</div>
 </template>
