--- a/client/layout.html
+++ b/client/layout.html
@@ -1,12 +1,17 @@
 <template name="layout">
-  <div class="container">
-      <header class="navbar navbar-default" role="navigation"> 
-      <div class="navbar-header">
-        <a class="navbar-brand" href="{{pathFor 'main'}}">Mario Kart Tracker</a>
-      </div>
-    </header>
-    <div id="main" class="row-fluid">
-      {{> yield}}
-    </div>
-  </div>
+	<div class="container">
+		<header class="navbar navbar-default" role="navigation"> 
+			<div class="navbar-header">
+				<a class="navbar-brand" href="{{pathFor 'main'}}">Mario Kart Tracker</a>
+			</div>
+			<div class="collapse navbar-collapse" id="navigation">
+				<ul class="nav navbar-nav">
+					<li><a href="{{pathFor 'grandPrixStart'}}">Start Grand Prix</a></li>
+				</ul>
+			</div>
+		</header>
+		<div id="main" class="row-fluid">
+			{{> yield}}
+		</div>
+	</div>
 </template>
