adding ability to add users

--- a/client/layout.html
+++ b/client/layout.html
@@ -2,7 +2,12 @@
 	<div class="container">
 		<header class="navbar navbar-default" role="navigation"> 
 			<div class="navbar-header">
-				<a class="navbar-brand" href="{{pathFor 'main'}}">Mario Kart Tracker</a>
+				<a class="navbar-brand" href="{{pathFor 'summary'}}">Mario Kart Tracker</a>
+			</div>
+			<div class="collapse navbar-collapse" id="navigation">
+				<ul class="nav navbar-nav">
+					<li><a href="{{pathFor 'addUser'}}">Add User</a></li>
+				</ul>
 			</div>
 			<div class="collapse navbar-collapse" id="navigation">
 				<ul class="nav navbar-nav">
