adding ability to delete users

--- a/client/user.html
+++ b/client/user.html
@@ -2,5 +2,6 @@
 	<div class="userSummary">
 		<p>Real Name: {{name}}</p>
 		<p>DS Display Name: {{displayName}}</p>
+		<a class="btn btn-danger delete" href="#">Delete User</a>
 	</div>
 </template>
