adding list of all users to grand prix start screen

--- a/client/grand_prix_start.html
+++ b/client/grand_prix_start.html
@@ -1,8 +1,9 @@
 <template name="grandPrixStart">
 	<form class="main form page">
-		<h3>Select the racers</h3>
-		<div class="form-group">
-		</div>
-		<input type="submit" value="Start" class="btn btn-primary"/>
+		<h3>In this Grand Prix</h3>
+		{{#each users}}
+			<p>Racer: {{displayName}}</p>
+		{{/each}}
+		<input type="submit" value="Start GP" class="btn btn-primary"/>
 	</form>
 </template>
